RESOLVED FIXED 244298
Fix typo: BoyerMoyer should be BoyerMoore.
https://bugs.webkit.org/show_bug.cgi?id=244298
Summary Fix typo: BoyerMoyer should be BoyerMoore.
Mark Lam
Reported 2022-08-24 09:57:59 PDT
patch coming.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-24 09:59:06 PDT
Mark Lam
Comment 2 2022-08-24 10:03:05 PDT
EWS
Comment 3 2022-08-24 10:19:59 PDT
Committed 253728@main (21bbc3074c5e): <https://commits.webkit.org/253728@main> Reviewed commits have been landed. Closing PR #3615 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.