Fix typo: BoyerMoyer should be BoyerMoore. https://bugs.webkit.org/show_bug.cgi?id=244298 <rdar://problem/99089973>

Reviewed by Justin Michaud.

* Source/JavaScriptCore/dfg/DFGCommonData.h:
* Source/JavaScriptCore/yarr/YarrJIT.cpp:
(JSC::Yarr::jitCompileInlinedTest):
* Source/JavaScriptCore/yarr/YarrJIT.h:
(JSC::Yarr::YarrBoyerMoyerData::saveMaps): Deleted.
(JSC::Yarr::YarrBoyerMoyerData::clearMaps): Deleted.
(JSC::Yarr::YarrBoyerMoyerData::tryReuseBoyerMooreBitmap const): Deleted.

Canonical link: https://commits.webkit.org/253728@main